Fix: Card scaling on hover was too big

--- a/css/main.css
+++ b/css/main.css
@@ -297,8 +297,8 @@ a {
 }
 
 .card:hover {
-  -webkit-transform: scale(1.05);
-          transform: scale(1.05);
+  -webkit-transform: scale(1.025);
+          transform: scale(1.025);
 }
 
 .card__image {
