--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -14,7 +14,7 @@
     transition: transform 0.2s ease-in-out;
 
     &:hover {
-        transform: scale(1.05);
+        transform: scale(1.025);
     }
 
     &__image {
